feat : 채팅 기록 불러올때 이미지 채팅도 불러오도록 구현